--- a/learn-lens.cabal
+++ b/learn-lens.cabal
@@ -28,6 +28,8 @@ library
     build-depends:      base < 5 && >= 4
                     ,   containers
                     ,   array
+                    ,   mtl                 == 2.2.*
+                    ,   transformers        == 0.4.*
 
     ghc-options:        -Wall
                         -fno-warn-unused-imports
@@ -37,9 +39,14 @@ library
 
     hs-source-dirs:     src
 
-    exposed-modules:    Control.Lens.Core
+    exposed-modules:    Data.Functor.Const
+                    ,   Control.Lens.Core
+                    ,   Control.Lens.Getter
 
-    default-extensions: NoImplicitPrelude
+    other-modules:      LensPrelude
+
+    default-extensions: KindSignatures
+                    ,   NoImplicitPrelude
                     ,   RankNTypes
 
 test-suite              doctests
@@ -52,12 +59,11 @@ test-suite              doctests
     default-language:
                         Haskell2010
 
-    build-depends:
-                        base < 5 && >= 3,
-                        doctest >= 0.9.7,
-                        filepath >= 1.3,
-                        directory >= 1.1,
-                        QuickCheck >= 2.0
+    build-depends:      base < 5 && >= 3
+                    ,   doctest             == 0.9.*
+                    ,   filepath            == 1.3.*
+                    ,   directory           == 1.2.*
+                    ,   QuickCheck          == 2.7.*
 
     ghc-options:
                         -Wall
