simple type defs

--- a/learn-lens.cabal
+++ b/learn-lens.cabal
@@ -39,11 +39,13 @@ library
 
     hs-source-dirs:     src
 
-    exposed-modules:    Data.Contravariant
+    exposed-modules:    Data.Choice
+                    ,   Data.Contravariant
                     ,   Data.Functor.Const
                     ,   Control.Lens.Core
                     ,   Control.Lens.Getter
                     ,   Control.Lens.Motivation
+                    ,   Control.Lens.Prism1
                     ,   Control.Lens.Tuple
 
     other-modules:      LensPrelude
