Added Bifoldable class

--- a/learn-lens.cabal
+++ b/learn-lens.cabal
@@ -39,7 +39,8 @@ library
 
     hs-source-dirs:     src
 
-    exposed-modules:    Data.Contravariant
+    exposed-modules:    Data.Bifoldable
+                    ,   Data.Contravariant
                     ,   Data.Distributive
                     ,   Data.Functor.Const
                     ,   Data.Profunctor
